2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set date for 0.23.

2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at: Whoops, forgot to hit save.  Remove
	t_diff_changeset_bug.at.

2005-09-30  Grahame Bowland  <grahame@angrygoats.net>

	* paths.cc: remove unit tests for 
	file_path_internal_from_user

2005-09-30  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* configure.ac: only add gnu specific CFLAGS and CXXFLAGS for
	gnu compilers

2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* tests/t_log_outside_working_dir.at: Fix summary line.
	* tests/t_diff_changeset_bug.at: Remove redundant test
	(cf. t_restricted_diff_unchanged.at).

2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (BOTAN_SOURCES): Add botan/hash_id.h.

2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* NEWS: More additions (mention MM and the problems paths.cc will
	cause for colinux folks).

2005-09-30  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (MOST_SOURCES): Add hash_map.hh.
	(BOTAN_SOURCES): Add botan/charset.h.

2005-09-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Fix typos pointed out by Matthew Gregan.

2005-09-29  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE, configure.ac, monotone.spec, win32/monotone.iss:
	* debian/changelog: Bump version number.
	
2005-09-30  Grahame Bowland  <grahame@angrygoats.net>

	* paths.hh: update file_path documentation, 
	remove file_path_internal_from_user
	* paths.cc: remove file_path_internal_from_user
	* commands.cc CMD(cat): change file_path_internal_from_user 
	to file_path_external
	* tests/t_diff_outside_working_dir.at: check diff works outside 
	  of a working dir (with a file specified)
	* tests/t_log_outside_working_dir.at: check log works outside 
	  of a working dir (with a file specified)
	* tests/t_diff_changeset_bug.at: mysterious changeset bug
	* testsuite.at: add new tests

2005-09-29  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Add Grahame and Marcel.
	* NEWS: Write 0.23 entry.